fix(style): standard gaps

--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -21,7 +21,7 @@
   align-items: center;
 }
 
-.menu-btn {
+.mr {
   margin-right: 8px;
 }
 
@@ -32,7 +32,6 @@
 
 .brand-logo-small {
   max-height: 24px;
-  margin-right: 7px;
 
   &.hide {
     display: none;
